--- a/docs/style0129.css
+++ b/docs/style0129.css
@@ -40,7 +40,7 @@ a {
 /* 見出し */
 h2 {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   margin-bottom: 40px;
   position: relative;
   padding-bottom: 10px;
@@ -202,7 +202,7 @@ h2::after {
 }
 
 .comparison-title{
-  font-size: clamp(28px, 3.2vw, 20px);
+  font-size: clamp(23px, 3.2vw, 20px);
   line-height: 1.3;
   letter-spacing: .02em;
   margin: 0 0 18px;
@@ -313,7 +313,7 @@ h2::after {
 }
 
 .feature-head h2{
-  font-size: clamp(28px, 3.2vw, 44px);
+  font-size: clamp(23px, 3.2vw, 44px);
   line-height: 1.25;
   letter-spacing: .02em;
   margin: 10px 0 16px;
@@ -445,7 +445,7 @@ h2::after {
    ====================================================== */
 .simulation{
   padding: 110px 20px;
-  background: #fffaf5;
+  background: #ffff;
   text-align: center;
 }
 
@@ -650,8 +650,10 @@ h2::after {
 
 .faq-item {
   margin-bottom: 20px;
-  border-bottom: 1px solid #ddd;
-  padding-bottom: 10px;
+  border: 1px solid #e5e7eb;
+  padding: 20px;
+  background: #ffffff;
+  border-radius: 12px;
 }
 
 .faq-q {
